Melhorias na classes relatorio criando novo relatorio geral e formatação no relatorio e tratrativas dos aruivos fn